Fix Smarthack logo display in navbar on mobile

--- a/src/main.css
+++ b/src/main.css
@@ -1038,6 +1038,11 @@ a:focus {
     background-color: transparent;
   }
 
+  #header nav div#logoHeader {
+    overflow: hidden;
+    width: 96px;
+  }
+
   #header nav #menu {
     position: absolute;
     padding: 0;
@@ -1050,10 +1055,6 @@ a:focus {
     overflow: hidden;
     background-color: white;
     transition: all 300ms ease;
-  }
-
-  #header nav img {
-    display: none;
   }
 
   #header nav #menu > li {
